# reimann

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  demo.sh  deploy.sh  docker-compose.yml  genesis.json
cli/: Cargo.toml
cli/artifacts/: MockERC20.json  NexusSettler.json  RollupSettler.json
cli/src/: main.rs
contracts/: foundry.toml
contracts/src/: Counter.sol  NexusSettler.sol  RollupFiller.sol  RollupSettler.sol  SolverRegistry.sol  StateRootResolver.sol
contracts/src/interfaces/: IDestinationSettler.sol  IErrors.sol  IEvents.sol  INexusSettler.sol  IOriginSettler.sol  IResolver.sol  IStructs.sol
contracts/src/lib/: DepositContract.sol  MerklePatriciaProof.sol  RLPReader.sol  StateProofVerifier.sol
contracts/src/mocks/: MockERC20.sol
contracts/test/: DepositContractTest.t.sol
da-exex/: Cargo.toml
da-exex/src/: main.rs
da-server/: Cargo.toml
da-server/src/: main.rs
smt-server/: Cargo.toml
smt-server/src/: incremental_merkle_tree.rs  main.rs  mod.rs
solver/: Cargo.toml
solver/src/: main.rs
