[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport-http.workspace = true
futures.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
reqwest.workspace = true
serde.workspace = true
