[package]
name = "da-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
dotenvy.workspace = true
uuid.workspace = true
