[package]
name = "smt-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-merkle-tree.workspace = true
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
sha3.workspace = true
monotree.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
rand.workspace = true
