[package]
name = "smt-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
sha3.workspace = true
parking_lot.workspace = true

[dev-dependencies]
rand.workspace = true
