[package]
name = "solver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport-http.workspace = true
futures.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
reqwest.workspace = true
serde.workspace = true
parking_lot.workspace = true
